1998-11-06  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Fix stupid type (sterror_r -> strerror_r).

1998-11-04  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4 (need_gnome_support): Set this unconditionally
	to `yes'.  We'll soon be losing this variable.

1998-10-20  Andrew Veliath  <andrewtv@usa.net>

	* gnome-orbit-check.m4 (GNOME_ORBIT_HOOK): Add ORBIT_IDL
	detection; fix failure flag.

1998-10-12  Martin Baulig  <martin@home-of-linux.org>

	* compiler-flags.m4 (warnCFLAGS): Added `-Wno-unused'.

1998-10-11  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (libgtop_postinstall): Use `:' instead
	of the empty string if there is nothing to do since the empty string
	is no valid shell sytax.

1998-10-11  Marius Vollmer  <mvo@zagadka.ping.de>

	* gnome-guile-checks.m4: Check for "guile-config" and then for
	"build-guile", if guile-config couldn't be found.  Do not
	explicitely include output from "info libdir", it is already
	included in "link".  Use "compile" instead of "info includedir".  Do
	not include "1.2" in error message when Guile can't be found at
	all.
	
1998-10-11  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4 (GNOME_INIT_LIBGTOP): Added optional
	third parameter which is the `script-if-enabled' parameter of
	the GNOME_LIBGTOP_HOOOK.

1998-10-05  Karl Eichwalder <ke@suse.de>

	* gnome-xml-check.m4: Fix typo while signaling the error.

1998-10-05  Raja R Harinath  <harinath@cs.umn.edu>

	* compiler-flags.m4 (warnCFLAGS): Remove `-W'.
	(warn-unused): Remove.

1998-10-01  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (libgtop_postinstall): 
	Added `AC_SUBST(libgtop_postinstall)'. This is used in
	`src/daemon/Makefile.am' to make the server suid root or
	sgid kmem if required.

1998-09-28  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Make it accept libgtop >= 0.25.0 again.

	* gnome-libgtop-sysdeps.m4: Make the default not to build the